--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ tag_page_dir: tag
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%b %-d, %Y"
-  # skin: dark
+  skin: dark
 
   # generate social links in footer
   social_links:
